--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "haruncpi/laravel-id-generator": "^1.1",
         "laravel/framework": "^8.54",
         "laravel/sanctum": "^2.11",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "realrashid/sweet-alert": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.6",
