--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "mpdf/mpdf": "^8.1",
         "realrashid/sweet-alert": "^4.1"
     },
     "require-dev": {
